# Diffusion-LoRAcle

./: .gitignore  README.md  project_b_design_doc.md  pyproject.toml
ditloracle/data/: download_images.py  download_weights.py  scrape_civitai.py  sensitive_prescreen.py  vlm_backends.py
ditloracle/encoding/: svd_encoder.py
ditloracle/formats/: base_lineage.py  flux_lora.py  fused_split.py  safetensors_io.py
ditloracle/probe/: concept_family.py  featurizers.py  labels.py  metadata_baseline.py  projection.py  recipe_fingerprint.py  schema.py  significance.py
ditloracle/safety/: mint_spec.py  organism_schema.py
results/: poc0a_invariance__synthetic.json  poc0bc_baseline_sanity__synthetic.json  poc0d_base_lineage.json  poc0d_triage__flux_sample.json  poc1_probe.json  poc1a_apparatus__civitai_n112.json
scripts/: label_tool.py  merge_labels.py  poc0a_invariance_report.py  poc0bc_baseline_sanity.py  poc0d_base_lineage.py  poc0d_triage.py  poc1_probe.py  poc1c_organism_gate.py  route_sensitive.py  vlm_draft_benign.py
scripts/cluster/: run_vlm.sh  run_vlm_t4.sh  vlm_pod.yaml
tests/: test_base_lineage.py  test_concept_family.py  test_featurizers.py  test_flux_parser.py  test_fused_split.py  test_invariance.py  test_organism_schema.py  test_recipe_fingerprint.py  test_schema.py  test_significance.py  test_vlm_pipeline.py
